Assert editing Lattice #66119

Closed
opened 2019-06-25 13:51:18 +02:00 by Antonio Vazquez · 5 comments

Windows 10 - Last source compiled at 25/06/2019 13:45:00
64 bits NVIDIA RTX2080TI

  1. Start Blender default scene
  2. Add a Lattice
  3. Enter in edit mode.
21: BLI_system_backtrace - 0x7FF76C73ACD0
20: drw_state_validate - 0x7FF76D5AF370
19: drw_draw_pass_ex - 0x7FF76D5B1030
18: DRW_draw_pass - 0x7FF76D5AE1B0
17: EDIT_LATTICE_draw_scene - 0x7FF76D5FCFD0
16: drw_engines_draw_scene - 0x7FF76D5780E0
15: DRW_draw_render_loop_ex - 0x7FF76D571230
14: DRW_draw_view - 0x7FF76D570DC0
13: view3d_draw_view - 0x7FF76DBE9850
12: view3d_main_region_draw - 0x7FF76DBE5A90
11: ED_region_do_draw - 0x7FF76DCFDB80
10: wm_draw_window_offscreen - 0x7FF76CDDAB50
9: wm_draw_window - 0x7FF76CDDB3D0
8: wm_draw_update - 0x7FF76CDD9480
7: WM_main - 0x7FF76CD77FC0
6: main - 0x7FF76C2C4130
5: invoke_main - 0x7FF76FA39960
4: __scrt_common_main_seh - 0x7FF76FA39710
3: __scrt_common_main - 0x7FF76FA396F0
2: mainCRTStartup - 0x7FF76FA39A20
1: BaseThreadInitThunk - 0x7FFC53E47BC0
0: RtlUserThreadStart - 0x7FFC55ACCE50
BLI_assert failed: D:\MyBlender\BlenderDEV\blender\source\blender\draw\intern\draw_manager_exec.c:357, drw_state_validate(), at 'DST.state & (DRW_STATE_DEPTH_ALWAYS | DRW_STATE_DEPTH_LESS | DRW_STATE_DEPTH_LESS_EQUAL | DRW_STATE_DEPTH_EQUAL | DRW_STATE_DEPTH_GREATER | DRW_STATE_DEPTH_GREATER_EQUAL)'
Windows 10 - Last source compiled at 25/06/2019 13:45:00 64 bits NVIDIA RTX2080TI 1) Start Blender default scene 2) Add a Lattice 3) Enter in edit mode. ``` 21: BLI_system_backtrace - 0x7FF76C73ACD0 20: drw_state_validate - 0x7FF76D5AF370 19: drw_draw_pass_ex - 0x7FF76D5B1030 18: DRW_draw_pass - 0x7FF76D5AE1B0 17: EDIT_LATTICE_draw_scene - 0x7FF76D5FCFD0 16: drw_engines_draw_scene - 0x7FF76D5780E0 15: DRW_draw_render_loop_ex - 0x7FF76D571230 14: DRW_draw_view - 0x7FF76D570DC0 13: view3d_draw_view - 0x7FF76DBE9850 12: view3d_main_region_draw - 0x7FF76DBE5A90 11: ED_region_do_draw - 0x7FF76DCFDB80 10: wm_draw_window_offscreen - 0x7FF76CDDAB50 9: wm_draw_window - 0x7FF76CDDB3D0 8: wm_draw_update - 0x7FF76CDD9480 7: WM_main - 0x7FF76CD77FC0 6: main - 0x7FF76C2C4130 5: invoke_main - 0x7FF76FA39960 4: __scrt_common_main_seh - 0x7FF76FA39710 3: __scrt_common_main - 0x7FF76FA396F0 2: mainCRTStartup - 0x7FF76FA39A20 1: BaseThreadInitThunk - 0x7FFC53E47BC0 0: RtlUserThreadStart - 0x7FFC55ACCE50 BLI_assert failed: D:\MyBlender\BlenderDEV\blender\source\blender\draw\intern\draw_manager_exec.c:357, drw_state_validate(), at 'DST.state & (DRW_STATE_DEPTH_ALWAYS | DRW_STATE_DEPTH_LESS | DRW_STATE_DEPTH_LESS_EQUAL | DRW_STATE_DEPTH_EQUAL | DRW_STATE_DEPTH_GREATER | DRW_STATE_DEPTH_GREATER_EQUAL)' ```
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Clément Foucault was assigned by Antonio Vazquez 2019-06-25 13:51:58 +02:00
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member

@fclem I can reproduce it only using Debug mode

@fclem I can reproduce it only using Debug mode

This issue was referenced by 19d90c8602

This issue was referenced by 19d90c8602193f370c8d47805c82f16d9e6c18c0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66119
No description provided.