Fix T66119: Assert editing Lattice