source/blender/draw/modes/edit_lattice_mode.c
@@ -186,7 +186,7 @@ static void EDIT_LATTICE_cache_init(void *vedata)
       DRW_shgroup_state_enable(stl->g_data->wire_shgrp, DRW_STATE_CLIP_PLANES);
     }
 
-    state = DRW_STATE_WRITE_COLOR | DRW_STATE_WRITE_DEPTH;
+    state = DRW_STATE_WRITE_COLOR;
     psl->vert_pass = DRW_pass_create("Lattice Verts", state);
     stl->g_data->vert_shgrp = DRW_shgroup_create(sh_data->overlay_vert, psl->vert_pass);
     DRW_shgroup_uniform_block(stl->g_data->vert_shgrp, "globalsBlock", G_draw.block_ubo);
